# Robothon

./: README.md
Task11/: CMakeLists.txt  README.md  package.xml
Task11/data/: copy_self_collision_specific_joint_poses.json  copy_self_collision_target_cartesian_poses.json  output.json
Task11/include/: task11.h
Task11/launch/: collision.launch  config.rviz  task11.launch  test.launch
Task11/robots/: copy_arm.xacro  copy_panda.srdf  copy_panda.srdf.xacro  panda_arm.urdf  panda_arm_hand.urdf
Task11/src/: task11.cpp
Task11/src/.old/: self_collision_detector.cpp  self_collision_detector.h  self_collision_detector.py  tutorial_collision.cpp  tutorial_cpp.cpp
Task12/: CMakeLists.txt  README.md  package.xml
Task12/config/: Task12.rviz  fake_controllers.yaml  ros_controllers.yaml
Task12/data/: self_collision_target_cartesian_poses.data
Task12/launch/: moveit_panda.launch  panda_gazebo.launch  planning_context.launch
Task12/robots/: panda_arm.urdf.xacro  panda_arm.xacro
Task12/src/: task1_2.cpp
Task21/: README.md  scene_task21.ttt  scene_task21_cluttered.ttt  scene_task21_cluttered_improved.ttt
Task22/: README.md  coll_free_nullspace_configs.m  eval_coll_mat.m  nullspace_configs.m  search_nullspace.m  task22_cluttered_matlab.m  task22_matlab.m
Task22/figs/: all_sphere_pos_2cm.fig  all_sphere_pos_2cm_cluttered.fig  nullspace_configs.fig  nullspace_configs_cluttered.fig  nullspace_configs_visualized.fig  nullspace_configs_visualized_cluttered.fig  nullspace_ee_position.fig  nullspace_ee_position_cluttered.fig
Task23/: .gitignore  README.md  install.sh  reaching_task_simulation.py
Task23/qLearner/: networks.py  qAgent.py  training_tracker.py
